--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="{{ site.lang | default: "en-US" }}">
+<html lang="en-US">
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <link rel="stylesheet" href="/assets/css/style.css">
 
   </head>
 
@@ -23,7 +23,7 @@
 
     <section class="vision">
       <h1>_nf4t_HAPPY</h1>
-      <p>coming soon <a href="https://opensea.io/collection/vision-0f-guanciale/">on the opensea amrketplace_</a></p>
+      <p>coming soon <a href="https://opensea.io/collection/vision-0f-guanciale/">on the opensea marketplace_</a></p>
     </section>
 
   </body>
