--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
 
     <header>
-      VISION_0f_GUANCIALE
+      <h1>VISION_0f_GUANCIALE</h1>
     </header>
     <section>
       <a href="https://opensea.io/collection/vision-0f-guanciale/">find_on_opensea_</a>
