--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <header>
       <h1>VISION_0f_GUANCIALE</h1>
-      <a href="https://opensea.io/collection/vision-0f-guanciale/">find_on_opensea_</a>
+      <a href="https://opensea.io/collection/vision-0f-guanciale/">&gt; find_on_opensea_</a>
     </header>
     <section>
       a spark, a journey, of image and imagine. to coat the cosmos of the multiverse with blocks of rich, premium delight.
