--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <a href="https://opensea.io/collection/vision-0f-guanciale/">&gt; find_on_opensea_</a>
     </header>
     <section>
-      a spark, a journey, of image and imagine. to coat the cosmos of the multiverse with blocks of rich, premium delight.
-      this is VISION_0f_GUANCIALE _
+      <p>a spark, a journey, of image and imagine. to coat the cosmos of the multiverse with blocks of rich, premium delight.</p>
+      <p>this is VISION_0f_GUANCIALE _</p>
     </section>
 
     <section class="vision">
