--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 
     <section class="vision">
       <h1>_nf4t_HAPPY</h1>
-      <p>coming soon <a href="https://opensea.io/collection/vision-0f-guanciale/">on the opensea marketplace_</a></p>
+      <h4>1/6</h4>
+      <a href="https://opensea.io/assets/0x495f947276749ce646f68ac8c248420045cb7b5e/33141660269376157622929602557934242461516997279479147223348724839864653053953"><img src="/guanciale-001-glitched-001.png" alt="_nf4t_HAPPY_glitch#0x001"></a>
+      <p>_nf4t_HAPPY_glitch#0x001 <a href="https://opensea.io/assets/0x495f947276749ce646f68ac8c248420045cb7b5e/33141660269376157622929602557934242461516997279479147223348724839864653053953">on opensea_</a></p>
     </section>
 
   </body>
