--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
     <section class="vision">
       <h1>_nf4t_HAPPY</h1>
+      <p>Delicious guanciale brings greasy blocks of HAPPYness to crypto wallets.</p>
       <ul>
         <li>
           <h4>1/6</h4>
