--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 
     <header>
       <h1>VISION_0f_GUANCIALE</h1>
-      <a href="https://opensea.io/collection/vision-0f-guanciale/">&gt; find_on_opensea_</a>
     </header>
     <section>
       <p>a spark, a journey, of image and imagine. to coat the cosmos of the multiverse with blocks of rich, premium delight.</p>
@@ -21,37 +20,37 @@
 
     <section class="vision">
       <h1>_nf4t_HAPPY</h1>
-      <p>Delicious guanciale brings greasy blocks of HAPPYness to crypto wallets.</p>
+      <p>Delicious guanciale brings greasy blocks of HAPPYness.</p>
       <ul>
         <li>
           <h4>1/6</h4>
-          <a href="https://opensea.io/assets/0x495f947276749ce646f68ac8c248420045cb7b5e/33141660269376157622929602557934242461516997279479147223348724839864653053953"><img src="/guanciale-001-glitched-001.png" alt="_nf4t_HAPPY_glitch#0x001"></a>
-          <p>_nf4t_HAPPY_glitch#0x001 <a href="https://opensea.io/assets/0x495f947276749ce646f68ac8c248420045cb7b5e/33141660269376157622929602557934242461516997279479147223348724839864653053953">on opensea_</a></p>
+          <a href="#"><img src="/guanciale-001-glitched-001.png" alt="_nf4t_HAPPY_glitch#0x001"></a>
+          <p>_nf4t_HAPPY_glitch#0x001</p>
         </li>
         <li>
           <h4>2/6</h4>
-          <a href="https://opensea.io/assets/0x495f947276749ce646f68ac8c248420045cb7b5e/33141660269376157622929602557934242461516997279479147223348724840964164681729"><img src="/guanciale-001-glitched-002.png" alt="_nf4t_HAPPY_glitch#0x002"></a>
-          <p>_nf4t_HAPPY_glitch#0x002 <a href="https://opensea.io/assets/0x495f947276749ce646f68ac8c248420045cb7b5e/33141660269376157622929602557934242461516997279479147223348724840964164681729">on opensea_</a></p>
+          <a href="#"><img src="/guanciale-001-glitched-002.png" alt="_nf4t_HAPPY_glitch#0x002"></a>
+          <p>_nf4t_HAPPY_glitch#0x002</p>
         </li>
         <li>
           <h4>3/6</h4>
-          <a href="https://opensea.io/assets/0x495f947276749ce646f68ac8c248420045cb7b5e/33141660269376157622929602557934242461516997279479147223348724842063676309505"><img src="/guanciale-001-glitched-003.png" alt="_nf4t_HAPPY_glitch#0x003"></a>
-          <p>_nf4t_HAPPY_glitch#0x003 <a href="https://opensea.io/assets/0x495f947276749ce646f68ac8c248420045cb7b5e/33141660269376157622929602557934242461516997279479147223348724842063676309505">on opensea_</a></p>
+          <a href="#"><img src="/guanciale-001-glitched-003.png" alt="_nf4t_HAPPY_glitch#0x003"></a>
+          <p>_nf4t_HAPPY_glitch#0x003</p>
         </li>
         <li>
           <h4>4/6</h4>
-          <a href="https://opensea.io/assets/0x495f947276749ce646f68ac8c248420045cb7b5e/33141660269376157622929602557934242461516997279479147223348724843163187937281"><img src="/guanciale-001-glitched-004.png" alt="_nf4t_HAPPY_glitch#0x004"></a>
-          <p>_nf4t_HAPPY_glitch#0x004 <a href="https://opensea.io/assets/0x495f947276749ce646f68ac8c248420045cb7b5e/33141660269376157622929602557934242461516997279479147223348724843163187937281">on opensea_</a></p>
+          <a href="#"><img src="/guanciale-001-glitched-004.png" alt="_nf4t_HAPPY_glitch#0x004"></a>
+          <p>_nf4t_HAPPY_glitch#0x004</p>
         </li>
         <li>
           <h4>5/6</h4>
-          <a href="https://opensea.io/assets/0x495f947276749ce646f68ac8c248420045cb7b5e/33141660269376157622929602557934242461516997279479147223348724844262699565057"><img src="/guanciale-001-glitched-005.png" alt="_nf4t_HAPPY_glitch#0x005"></a>
-          <p>_nf4t_HAPPY_glitch#0x005 <a href="https://opensea.io/assets/0x495f947276749ce646f68ac8c248420045cb7b5e/33141660269376157622929602557934242461516997279479147223348724844262699565057">on opensea_</a></p>
+          <a href="#"><img src="/guanciale-001-glitched-005.png" alt="_nf4t_HAPPY_glitch#0x005"></a>
+          <p>_nf4t_HAPPY_glitch#0x005</p>
         </li>
         <li>
           <h4>6/6</h4>
-          <a href="https://opensea.io/assets/0x495f947276749ce646f68ac8c248420045cb7b5e/33141660269376157622929602557934242461516997279479147223348724845362211192833"><img src="/guanciale-001-glitched-006.png" alt="_nf4t_HAPPY_glitch#0x006"></a>
-          <p>_nf4t_HAPPY_glitch#0x006 <a href="https://opensea.io/assets/0x495f947276749ce646f68ac8c248420045cb7b5e/33141660269376157622929602557934242461516997279479147223348724845362211192833">on opensea_</a></p>
+          <a href="#"><img src="/guanciale-001-glitched-006.png" alt="_nf4t_HAPPY_glitch#0x006"></a>
+          <p>_nf4t_HAPPY_glitch#0x006</p>
         </li>
       </ul>
     </section>
